@@ -5,6 +5,7 @@ New model for superClass: maximum likelihood classification (model = "mlc")
 
 Fixes:
 * Restrict calculation of EVI/EVI2 to reflectance data (#3)
+* Enforce valid value ranges in radCor: radiance: [0,+Inf], reflectance: [0,1]. Includes a new argument `clamp` to turn this on or off (on by default).
 
 RStoolbox 0.1.1
 =====================================
